my-test/testsuite_scan/ir/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_d.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_d.c:7:3: error: use of undeclared identifier '__m256i'
    7 |   __m256i __m256i_out, __m256i_result;
      |   ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_d.c:8:3: error: use of undeclared identifier '__m256'
    8 |   __m256 __m256_out, __m256_result;
      |   ^~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_d.c:9:3: error: use of undeclared identifier '__m256d'
    9 |   __m256d __m256d_out, __m256d_result;
      |   ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_d.c:10:3: error: use of undeclared identifier 'v4u64'
   10 |   v4u64 v4u64_op0, v4u64_op1, v4u64_op2, v4u64_result;
      |   ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_d.c:11:3: error: use of undeclared identifier 'v8i32'
   11 |   v8i32 v8i32_op0, v8i32_op1, v8i32_op2, v8i32_result;
      |   ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_d.c:19:3: error: use of undeclared identifier 'v4u64_op0'
   19 |   v4u64_op0 = (v4u64){0x0000000000000000, 0x000000040000fff8,
      |   ^~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_d.c:19:16: error: use of undeclared identifier 'v4u64'
   19 |   v4u64_op0 = (v4u64){0x0000000000000000, 0x000000040000fff8,
      |                ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_d.c:21:3: error: use of undeclared identifier 'v4u64_op1'
   21 |   v4u64_op1 = (v4u64){0x0000000000000000, 0x0000000000000000,
      |   ^~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_d.c:21:16: error: use of undeclared identifier 'v4u64'
   21 |   v4u64_op1 = (v4u64){0x0000000000000000, 0x0000000000000000,
      |                ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_d.c:23:3: error: use of undeclared identifier 'v4u64_result'
   23 |   v4u64_result = (v4u64){0x0000000000000000, 0x000000040000fff8,
      |   ^~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_d.c:23:19: error: use of undeclared identifier 'v4u64'
   23 |   v4u64_result = (v4u64){0x0000000000000000, 0x000000040000fff8,
      |                   ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_d.c:25:3: error: use of undeclared identifier '__m256d_out'
   25 |   __m256d_out = __lasx_xvfmaxa_d((__m256)v4u64_op0, (__m256)v4u64_op1);
      |   ^~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_d.c:25:17: error: call to undeclared function '__lasx_xvfmaxa_d'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   25 |   __m256d_out = __lasx_xvfmaxa_d((__m256)v4u64_op0, (__m256)v4u64_op1);
      |                 ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_d.c:25:35: error: use of undeclared identifier '__m256'
   25 |   __m256d_out = __lasx_xvfmaxa_d((__m256)v4u64_op0, (__m256)v4u64_op1);
      |                                   ^~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_d.c:25:54: error: use of undeclared identifier '__m256'
   25 |   __m256d_out = __lasx_xvfmaxa_d((__m256)v4u64_op0, (__m256)v4u64_op1);
      |                                                      ^~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_d.c:26:19: error: use of undeclared identifier 'v4u64_result'
   26 |   check_lasx_out(&v4u64_result, &__m256d_out, sizeof(__m256d_out), __FILE__, __LINE__);
      |                   ^~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_d.c:26:34: error: use of undeclared identifier '__m256d_out'
   26 |   check_lasx_out(&v4u64_result, &__m256d_out, sizeof(__m256d_out), __FILE__, __LINE__);
      |                                  ^~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_d.c:26:54: error: use of undeclared identifier '__m256d_out'
   26 |   check_lasx_out(&v4u64_result, &__m256d_out, sizeof(__m256d_out), __FILE__, __LINE__);
      |                                                      ^~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_d.c:28:3: error: use of undeclared identifier 'v4u64_op0'
   28 |   v4u64_op0 = (v4u64){0x0000000000000000, 0x0000000000000000,
      |   ^~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
